sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:16: error: ')' expected but ',' found.
      for(i<- nbValeurs -2 to 0 , step -1 ){
                                ^AlgCocktailSort1:23: error: illegal start of simple expression
   } while(fin !=0)
   ^